feat(core): 新增全屏功能、时间显示及字体样式优化，添加路由配置与进度条管理

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -14,3 +14,13 @@ body,
   width: 100%;
   height: 100%;
 }
+
+@font-face {
+  font-family: 'ds-digitalbold_italic';
+  font-style: normal;
+  font-weight: bold;
+  src:
+    url('@/assets/fonts/ds-digital-webfont.woff2') format('woff2'),
+    url('@/assets/fonts/ds-digital-webfont.woff') format('woff');
+
+}
