feat: 添加404页面和test页面，调整路由配置和样式

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'ds-digitalbold_italic';
+  font-style: normal;
+  font-weight: bold;
+  src:
+    url('@/assets/fonts/ds-digital-webfont.woff2') format('woff2'),
+    url('@/assets/fonts/ds-digital-webfont.woff') format('woff');
+}
+
 html,
 body,
 #app {
@@ -15,12 +24,8 @@ body,
   height: 100%;
 }
 
-@font-face {
-  font-family: 'ds-digitalbold_italic';
-  font-style: normal;
-  font-weight: bold;
-  src:
-    url('@/assets/fonts/ds-digital-webfont.woff2') format('woff2'),
-    url('@/assets/fonts/ds-digital-webfont.woff') format('woff');
-
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
